@@ -156,7 +156,19 @@ function check_regon($regon)
 	$regon = str_replace(' ', '', $regon);
 	$sum_nb = 0;
 
-        if(strlen($regon) == 9)
+        if(strlen($regon) == 14)
+	{
+		$steps = array(2, 4, 8, 5, 0, 9, 7, 3, 6, 1, 2, 4, 8);
+	
+		for($x = 0; $x < 13; $x++) $sum_nb += $steps[$x] * $regon[$x];
+	
+		$mod = $sum_nb % 11;
+		
+		if($mod == 10) $mod = 0;
+	
+		if($mod == $regon[13]) return true;
+	}
+        else if(strlen($regon) == 9)
 	{
 		$steps = array(8, 9, 2, 3, 4, 5, 6, 7);
 	
